<resources>
    <string name="app_name">App Bai1 Lab02</string>
    <string name="todo">TODO</string>
    <string name="Sign_in_title">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="keep_sign_in_text">Keep me signned In</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="sign_in_btn">Sign in</string>
</resources>