<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgClock"
        android:layout_width="148dp"
        android:layout_height="159dp"
        android:layout_marginTop="50dp"
        android:background="#00000000"
        android:backgroundTint="#00D31616"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_lock"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tvSignTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Sign_in_title"
        android:textSize="25sp"
        android:textColor="#ab1b11"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgClock" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignTitle"
        android:autofillHints="" />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/cbKeepSign"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvKeepSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/keep_sign_in_text"
        android:textColor="#16b507"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/cbKeepSign"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvResetPass"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:text="@string/reset_password"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvKeepSign" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/sign_in_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
